--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <meta name="description" content="Serie de comedia" <meta charset="UTF-8">
+  <meta name="description" content="Serie sobre la vida de un norteamericano" <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Serie</title>
+  <title>Larry David</title>
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="season one.html">
 </head>
 
 <body>
