--- a/season-03.html
+++ b/season-03.html
@@ -17,20 +17,39 @@
     </header>
     <section>
       <h2>Capitulo 1</h2>
-      <h3></h3>
-      <p>
+      <h3>El taller</h3>
+      <p>Jeff compra un Chevrolet del 57 y deja a Larry que de una vuelta con él. Al oír un anuncio en la radio se
+        despista y
+        termina chocando con un coche, que destroza la parte de atrás de la reliquia. El incidente comienza a tener
+        arreglo
+        cuando Cheryl organiza una cena con un grupo de amigos y uno de los invitados trabaja en Aamco, el taller
+        protagonista
+        del anuncio que hizo que Larry perdiera los papeles. Amablemente se ofrece a arreglar el coche de Jeff, pero la
+        cena no
+        termina demasiado bien.
       </p>
     </section>
     <section>
       <h2>Capitulo 2</h2>
-      <h3></h3>
-      <p>
+      <h3>Querida tía</h3>
+      <p> La tía de Cheryl muere y Larry queda encargado de escribir una esquela en el periódico, pero un error
+        tipográfico causa
+        el caos en la familia y Larry tiene que pasar la noche en casa de su amigo Jeff. Las cosas no mejoran allí
+        tampoco, ya
+        que la madre de Jeff, que celebra su cumpleaños en la ciudad, toma a Larry por un depravado de manera accidental
+        y no es
+        bien recibido tampoco en esa casa.
       </p>
     </section>
     <section>
       <h2>Capitulo 3</h2>
-      <h3></h3>
-      <p>
+      <h3>Discriminación positiva</h3>
+      <p> Larry se mete en problemas cuando hace una broma racista al dermatólogo de Richard Lewis, que es de raza
+        negra.
+        Casualmente, Cheryl tiene dermatitis y le da la receta de una crema para que se la compre, pero éste pierde la
+        prescripción y el sarpullido de su esposa empeora. Larry decide solucionar el asunto con urgencia y acudir a la
+        casa del
+        doctor de Lewis, donde le espera una reunión de hermanos.
       </p>
     </section>
   </main>
