--- a/season-06.html
+++ b/season-06.html
@@ -17,20 +17,40 @@
     </header>
     <section>
       <h2>Capitulo 1</h2>
-      <h3></h3>
-      <p>
+      <h3>El acupuntor</h3>
+      <p>Larry acude a un acupuntor japonés que le ofrece 5.000 dólares si no consigue arreglarle su molestia en la
+        espalda. Más
+        tarde, el especialista le envía a casa un ramo de orquídeas que incomodan a Larry. Sorprendentemente, el showman
+        se
+        encuentra a Barry Weiner, un antiguo conocido que trabajó como guionista y que ahora se gana la vida en un
+        supermercado.
+        El hombre le pide prestados a Larry 5.000 dólares y éste accede, pero el préstamo acabará en tragedia.
       </p>
     </section>
     <section>
-      <h2></h2>
-      <h3></h3>
-      <p>
+      <h2>Capitulo 2</h2>
+      <h3>La muñeca</h3>
+      <p>Larry y Julia consiguen convencer a los ejecutivos de abc de la calidad de su proyecto y éstos deciden llevarlo
+        a cabo.
+        En la proyección de la primera parte, la hija pequeña de Lane Michaelson, uno de los directivos de la cadena, le
+        pide a
+        Larry que corte el pelo de su muñeca. Cuando éste lo hace, la niña reacciona enfadándose y dejándole en
+        evidencia
+        delante de todo el mundo en la sala. Para conseguir cerrar el contrato con la televisión, Larry debe encontrar
+        cuanto
+        antes una cabeza de muñeca con el pelo largo, momento en el que a Jeff se le ocurre una brillante idea.
       </p>
     </section>
     <section>
-      <h2></h2>
-      <h3></h3>
-      <p>
+      <h2>Capitulo 3</h2>
+      <h3>Shaq</h3>
+      <p>Larry y Lewis consiguen entradas para un partido de los Lakers contra los Knicks justo al lado del banquillo de
+        los
+        Lakers. Shaq, la estrella del equipo, se prepara para hacer su salida triunfal a la cancha cuando Larry se
+        estira y le
+        hace caer al suelo lesionándose el tobillo. Todo el estadio abuchea al protagonista y le acusa de hacerlo a
+        propósito
+        puesto que él es hincha del equipo oponente.
       </p>
     </section>
   </main>
