--- a/season-08.html
+++ b/season-08.html
@@ -47,7 +47,7 @@
         el carril adicional. Lo peor viene cuando la mujer le pide a cambio ir con él al estadio a ver un partido de
         beisbol.
         Por otro lado, Larry le compra un poco de marihuana a Jorge García (Lost) para aliviar el dolor de ojos de su
-        padre.
+        padre
       </p>
     </section>
   </main>
