--- a/season-10.html
+++ b/season-10.html
@@ -17,20 +17,43 @@
     </header>
     <section>
       <h2>Capitulo 1</h2>
-      <h3></h3>
-      <p>
+      <h3>Ojos locos </h3>
+      <p>La pajarita. Larry quiere asegurarse de que no es adoptado y decide contratar a un detective privado para que
+        lo
+        investigue. Sin embargo, el investigador prefiere pensarse si aceptar el caso o no porque ha llegado a sus oídos
+        información sobre el carácter especial de Larry. Por otro lado, la comunidad de lesbianas se siente molesta con
+        el
+        showman después de que éste celebrara la reciente heterosexualidad de Jodi Funkhouser (Mayim Bialik, Blossom).
+        Por
+        suerte para Larry, la actriz Rossie O?Donnell (Los Picapiedra) consigue convencerle de que continúa siendo
+        bienvenido
+        entre ellas.
       </p>
     </section>
     <section>
-      <h2></h2>
-      <h3></h3>
-      <p>
+      <h2>Cpitulo 2</h2>
+      <h3>María, José y Larry</h3>
+      <p>La admiración del padre de Cheryl por la película La Pasión de Cristo saca a Larry de más de un problema en
+        este
+        episodio. Mientras, el protagonista es acusado de pervertido por su esposa y la de Jeff cuando le sorprenden
+        jugando con
+        un sujetador. Sin embargo, Larry tenía una razón para hacerlo: María, su asistenta, iba a ser despedida si no
+        empezaba a
+        usarlos con asiduidad.
       </p>
     </section>
     <section>
-      <h2></h2>
-      <h3></h3>
-      <p>
+      <h2>Capitulo 3</h2>
+      <h3>La gran inauguración</h3>
+      <p>Quedan pocos días para la inauguración de su restaurante y Larry está aterrado por la crítica que le pueda
+        hacer Andy
+        Portico, un incisivo crítico gastronómico de la televisión. Mientras hace la compra, Larry se encuentra con su
+        cocinero,
+        el cual luce un peluquín, razón por la que Larry le despide. Las cosas parecen empeorar cuando Larry lesiona a
+        Andy
+        Portico jugando al balón prisionero, pero resulta que el crítico acaba siendo la solución para encontrar un
+        nuevo Chef
+        para el restaurante.
       </p>
     </section>
   </main>
