--- a/season-11.html
+++ b/season-11.html
@@ -17,20 +17,36 @@
     </header>
     <section>
       <h2>Capitulo 1</h2>
-      <h3></h3>
-      <p>
+      <h3>La oferta de Mel </h3>
+      <p>Se acerca el décimo aniversario de boda de Larry y Cheryl y ambos se reafirman en lo que acordaron diez años
+        atrás: el
+        regalo del showman sería acostarse con otra mujer. Por otro lado, Mel Brooks, ganador de un Oscar por The
+        Producers,
+        ofrece a Larry un papel en dicha obra junto al actor Ben Stiller (Zoolander), que acude al teatro con su
+        prometida,
+        Christine Taylor (Cuestión de pelotas).
       </p>
     </section>
     <section>
-      <h2></h2>
-      <h3></h3>
-      <p>
+      <h2>Capitulo 2</h2>
+      <h3>Fiesta de cumpleaños de Ben</h3>
+      <p>Se acerca el décimo aniversario de boda de Larry y Cheryl y ambos se reafirman en lo que acordaron diez años
+        atrás: el
+        regalo del showman sería acostarse con otra mujer. Por otro lado, Mel Brooks, ganador de un Oscar por The
+        Producers,
+        ofrece a Larry un papel en dicha obra junto al actor Ben Stiller (Zoolander), que acude al teatro con su
+        prometida,
+        Christine Taylor (Cuestión de pelotas).
       </p>
     </section>
     <section>
-      <h2></h2>
-      <h3></h3>
-      <p>
+      <h2>Capitulo 3</h2>
+      <h3>Cita a ciegas</h3>
+      <p>Larry y Ben Stiller tienen una pelea y el showman habla con Mel y sus socios para explicarles su discusión. Por
+        otro
+        lado, Larry hace nuevos amigos, entre ellos una mujer árabe que lleva puesto un burka con la que quiere
+        emparejar a
+        Michael, su amigo ciego que acaba de romper con su novia.
       </p>
     </section>
   </main>
